# agri-drone

./: .dockerignore  .env.example  .gitignore  .trivyignore  CHANGELOG_RESEARCH_UPGRADE.md  CITATION.cff  Dockerfile  FINAL_REPO_AUDIT_FOR_EXTERNAL_REVIEW.md  HF_README.md  LEAKAGE_INVESTIGATION_REPORT.md  LICENSE  MANUSCRIPT_SUBMISSION_VERSION.md  PAPER_PACKAGE_CHECKLIST.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  REPO_REPAIR_LOG.md  RESEARCH_PAPER_CURRENT.md  RESEARCH_PAPER_FINAL_v3.md  RESEARCH_PAPER_v4.md  RESULTS_INTEGRITY_REPORT.md  SETUP_FROM_SCRATCH.md  SUPPORTED_CLAIMS_ONLY.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.lock.txt  requirements.txt  ruff.toml  test-output.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-hf.yml  security.yml
configs/: actuation.yaml  base.yaml  data.yaml  inference.yaml  model.yaml  prescription.yaml  sim.yaml
configs/economics/: india_2025.yaml
configs/matrix/: full.yaml  quick.yaml  smoke.yaml
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  index.css
deploy/: Dockerfile.hf  hf-readme.md
docs/: PHASE2_HANDOFF.md  api.md  architecture.md  data_availability.md  results_schema.md  safety.md  system_audit_report.json  training_recipe.md  vision_module.md
docs/archive_manuscripts/: PAPER1_NEGATIVE_RESULT.md  RESEARCH_PAPER.md  RESEARCH_PAPER_COMPLETE.md  RESEARCH_PAPER_FINAL.md  RESEARCH_PAPER_FINAL_v2.md  RESEARCH_PAPER_FINAL_v3.md  RESEARCH_PAPER_v4.md
evaluate/: __init__.py  _debug_b.py  _smoke_test.py  ablation_study.py  cross_dataset_eval.py  data_split_manifest.json  derive_crossover_ratio.py  eml_analysis.py  eml_sensitivity.py  expand_evaluation.py  fix_statistics.py  llava_eval.py  noise_pipeline.py  paper_tables.py  pdt_cross_eval.py  pdt_v2.py  rerun_config_c.py  robustness_eval.py  sensitivity_analysis.py  statistical_tests.py  statistical_tests_v2.py  test_4_images.py  test_endpoint.py  train_efficientnet.py
evaluate/matrix/: __init__.py  audit_baseline.py  run_matrix.py  train.py
evaluate/results/: ablation_latex.tex  ablation_summary.json  ablation_table.csv  claim_traceability_table.csv  cross_dataset_PDT.json  cross_dataset_PDT_predictions.csv  eml_comparison.csv  eml_summary.json  hh_ratio.json  mcnemar.json  mcnemar_A_vs_B.json  noisy_eval.csv  override_decomposition.csv  override_decomposition.json  predictions_A_efficientnet_b0.csv  predictions_A_yolo_only.csv  predictions_B_yolo_rules.csv  predictions_C_rules_only.csv  predictions_noisy.csv  robustness_report.txt  robustness_summary.json  section9_draft.md  sensitivity_grid.csv  sensitivity_summary.json  statistical_tests.json  statistical_tests_latex.tex  table2_ablation.tex  table3_sensitivity.tex  (+1 more)
paper/: compile.ps1  llncs.cls  main.tex  references.bib
scripts/: _build_colab_notebooks.py  ablation_study.py  annotate_wheat.py  audit_system.ps1  audit_system.py  build_prescription_map.py  collect_field_data.py  compare_models.py  dashboard.py  download_all_datasets.py  download_data.py  evaluate_model.py  example_detection.py  llm_contribution_study.py  make_splits.py  phone_connect.py  phone_test_pipeline.py  prepare_yolo_dataset.py  retrain_with_feedback.py  run_inference.py  safety_evaluation.py  smoke_test.py  sync_colab_results.py  test_api.py  train_improved.py  train_model.py  train_with_tracking.py  train_yolo_detector.py
tests/: conftest.py
(+123 files in other folders)
